some minor tweaks and bugfixes
Added check if file exists in song folders
Added some more regex